float and other text

--- a/force-app/main/default/lwc/callFiveStar/callFiveStar.html
+++ b/force-app/main/default/lwc/callFiveStar/callFiveStar.html
@@ -11,8 +11,22 @@
         <lightning-card>
             <div class="slds-text-align_center slds-text-heading_medium">How was the audio and video?</div>
             <br/>
-            <div >
-                    <c-five-star-rating value="5" onratingchange={handleRatingChanged}></c-five-star-rating>
+            <div class="slds-grid slds-wrap">
+                <div class="slds-col slds-size_1-of-1">
+                    <span>
+                        <c-five-star-rating value="5" onratingchange={handleRatingChanged}></c-five-star-rating>
+                    </span>
+                </div>
+                <div class="slds-col slds-size_1-of-2 slds-float_left">
+                    <span>
+                        Very bad
+                    </span>
+                </div>
+                <div class="slds-col slds-size_1-of-2 slds-float_right">
+                    <span>
+                        Very good
+                    </span>
+                </div>
             </div>  
         </lightning-card>
     </div>
