--- a/force-app/main/default/lwc/callFiveStar/callFiveStar.html
+++ b/force-app/main/default/lwc/callFiveStar/callFiveStar.html
@@ -14,7 +14,7 @@
             <div class="slds-grid slds-wrap">
                 <div class="slds-col slds-size_1-of-1">
                     <span>
-                        <c-five-star-rating value="5" onratingchange={handleRatingChanged}></c-five-star-rating>
+                        <c-five-star-rating value={rating} onratingchange={handleRatingChanged}></c-five-star-rating>
                     </span>
                 </div>
             </div>  
