--- a/force-app/main/default/lwc/reviewque/reviewque.html
+++ b/force-app/main/default/lwc/reviewque/reviewque.html
@@ -23,7 +23,7 @@
                 </lightning-progress-indicator>
             </div>
 
-            <br />  
+            <br />
 
             <div class="slds-col slds-size_1-of-4 slds-align_absolute-center"> Presentation </div>
             <div class="slds-col slds-size_1-of-4 slds-align_absolute-center"> Video </div>
@@ -33,18 +33,22 @@
         </div>
         <div class="slds-box slds-p-around_x-small">
             <template if:true={varSelectStep1}>
-                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep1</strong></div>
+                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep1</strong>
+                </div>
             </template>
             <template if:true={varSelectStep2}>
-                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep2</strong></div>
+                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep2</strong>
+                </div>
             </template>
             <template if:true={varSelectStep3}>
-                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep3</strong></div>
+                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep3</strong>
+                </div>
             </template>
             <template if:true={varSelectStep4}>
-                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep4</strong></div>
+                <div class="slds-text-align_center slds-text-heading_small"><strong>What went wrong? STep4</strong>
+                </div>
             </template>
-            
+
         </div>
 
         <div class="slds-m-vertical_medium">
