--- a/force-app/main/default/lwc/reviewque/reviewque.html
+++ b/force-app/main/default/lwc/reviewque/reviewque.html
@@ -74,6 +74,12 @@
             <div class="slds-col slds-size_3-of-12 slds-float_left">
                 <lightning-button label="Back" class="slds-m-left_x-small" onclick={handlePrev}></lightning-button>
             </div>
+            <div class="slds-col slds-size_3-of-12">
+                
+            </div>
+            <div class="slds-col slds-size_3-of-12">
+            
+            </div>
             <div class="slds-col slds-size_3-of-12 slds-float_right">
                 <template if:false={isSelectStep4}>
                     <lightning-button variant="brand" class="slds-m-left_x-small" label="Next" onclick={handleNext}>
