final HTML button changes

--- a/force-app/main/default/lwc/reviewque/reviewque.html
+++ b/force-app/main/default/lwc/reviewque/reviewque.html
@@ -25,10 +25,10 @@
 
             <br />
 
-            <div class="slds-col slds-size_1-of-4 slds-align_absolute-center"> Presentation </div>
-            <div class="slds-col slds-size_1-of-4 slds-align_absolute-center"> Video </div>
-            <div class="slds-col slds-size_1-of-4 slds-align_absolute-center"> Audio </div>
-            <div class="slds-col slds-size_1-of-4 slds-align_absolute-center"> Other </div>
+            <div class="slds-col slds-size_2-of-12 slds-align_absolute-center"> Presentation </div>
+            <div class="slds-col slds-size_2-of-12 slds-align_absolute-center"> Video </div>
+            <div class="slds-col slds-size_2-of-12 slds-align_absolute-center"> Audio </div>
+            <div class="slds-col slds-size_2-of-12 slds-align_absolute-center"> Other </div>
 
         </div>
         <div class="slds-box slds-m-around_x-small slds-p-around_x-small">
@@ -70,24 +70,17 @@
 
         </div>
 
-        <div class="slds-m-vertical_medium slds-grid slds-wrap">
-            <div class="slds-col slds-size_3-of-12 slds-float_left">
-                <lightning-button label="Back" class="slds-m-left_x-small" onclick={handlePrev}></lightning-button>
+        <div class="slds-p-around_x-small slds-clearfix">
+            <div class="slds-float_left">
+                <lightning-button label="Back" class="" onclick={handlePrev}></lightning-button>
             </div>
-            <div class="slds-col slds-size_3-of-12">
-                
-            </div>
-            <div class="slds-col slds-size_3-of-12">
-            
-            </div>
-            <div class="slds-col slds-size_3-of-12 slds-float_right">
+
+            <div class="slds-float_right">
                 <template if:false={isSelectStep4}>
-                    <lightning-button variant="brand" class="slds-m-left_x-small" label="Next" onclick={handleNext}>
-                    </lightning-button>
+                    <lightning-button variant="brand" class="" label="Next" onclick={handleNext}></lightning-button>
                 </template>
                 <template if:true={isSelectStep4}>
-                    <lightning-button variant="brand" class="slds-m-left_x-small" label="Submit" onclick={handleFinish}>
-                    </lightning-button>
+                    <lightning-button variant="brand" class="" label="Submit" onclick={handleFinish}></lightning-button>
                 </template>
             </div>
         </div>
